<resources>
    <string name="app_name">Instabug task</string>
    <string name="url">URL</string>
    <string name="type">Type</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="headers">Headers</string>
    <string name="ex_url">https://www.instabug.com/</string>
    <string name="request_body">Request Body</string>
    <string name="ex_body">{ \"username\": \"1111111111\", \n "password\": \"1111111111\" }</string>
    <string name="query_parameters">Query parameters</string>
    <string name="send">send</string>
    <string name="empty_url">Insert a valid URL</string>
    <string name="empty_request_type">choose a request type</string>
    <string name="response_code">Response Code</string>
    <string name="error">Error</string>
    <string name="response_body">Response body</string>
    <string name="cancel">Cancel</string>
</resources>